# stretch_web_teleop

./: .babelrc  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CMakeLists.txt  DEVELOPMENT.md  LICENSE.md  MIGRATION.md  README.md  WEBRTC_PROJECT_LICENSE.md  babel.config.js  configure_audio.sh  create_certificates.sh  cyclonedds_config.xml  ecosystem.config.js  eslint.config.mjs  frames_2024-06-26_16.34.36.gv  hardcopy.0  launch_interface.sh  log.txt  mount_flash_drive.sh  package-lock.json  package.json  package.xml  package_backup.json  prepare_specialized_urdf.py  requirements.txt  server.js  start_robot_browser.js  start_ros2.sh  start_tests.sh  start_web_server.sh  start_web_server_and_robot_browser.sh  stop_interface.sh  styleguide.config.js  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/workflows/: pre-commit.yaml
action/: HeadScan.action  MoveToPregrasp.action  NavigateToAruco.action
certificates/: rootCA-key.pem  rootCA.pem  slinky.hcrlab.cs.washington.edu+6-key.pem  slinky.hcrlab.cs.washington.edu+6.pem
config/: configure_video_streams_params.yaml  stretch_marker_dict.yaml  text_to_speech_ui_history.txt
docs/: index.md  usage_guide.md
docs/assets/operator/: component_hiearchy.drawio
documentation/: development.md  how_does_webrtc_work.md  tutorial.md  using_remotely.md  webteleop_latency.md
documentation/assets/latency_test/: webteleop_video_components.drawio.xml
fish_eye_cameras/: 88-hello-navigation-camera.rules  89-hello-gripper-camera.rules  install_gripper_and_navigation_cameras.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/stretch_web_teleop/lib/stretch_web_teleop/: compressed_image_visualizer.py
install/stretch_web_teleop/share/stretch_web_teleop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: d435i.launch  gripper_camera.launch  gripper_camera.launch.py  multi_camera.launch.py  navigation_camera.launch  navigation_camera.launch.py  web_interface.launch  web_interface.launch.py  web_interface_simulation.launch
log/: latest_build
maps/: cropped_warehouse.yaml  map.yaml  map_server_params.yaml
msg/: ArucoNavigationState.msg  TextToSpeech.msg
nodes/: aruco_navigation  aruco_navigation.py  compressed_image_visualizer.py  configure_video_streams  configure_video_streams.py  configure_video_streams_params.yaml  constants.py  detect_aruco_markers  detect_aruco_markers.py  detect_objects.py  dummy_show_tablet.py  gripper_camera.py  head_scan  head_scan.py  head_to_aruco  helpers.py  inverse_jacobian_controller.py  move_to_pregrasp.py  navigate_to_aruco  navigate_to_aruco.py  navigation_camera.py  old_navigation_camera.py  pinocchio_ik_solver.py  rotate_video_stream  stretch_controls.py  stretch_ik_control.py  stretch_ik_control_old.py  test_controls.py  text_to_speech.py  text_to_speech_ui.py  urdf.py  urdf_utils.py  web_teleop_node.py
scripts/: Controllers.py  Gamepad.py  crop_map.py  test_tts.py
src/backend/: main.ts  robot.ts  videostream.ts
src/css/: buttonpads.css  index.css  operator.css  predictivedisplay.css  tabs.css  videostreams.css
src/html/: index.html
src/pages/home/css/: CallRobotSelector.css  Changelog.css  LoginView.css  SideBySideView.css  index.css
src/pages/home/html/: index.html
src/pages/home/tsx/: index.tsx  utils.tsx
src/pages/operator/: README.md  gamepad-temp.py  temp.txt
src/pages/operator/css/: ActionMode.css  ActionSpeed.css  AdaptiveControl.css  Alert.css  ArucoMarkers.css  AudioControl.css  AutoNav.css  BatteryBar.css  BatteryGauge.css  BatteryGuage.css  ButtonGrid.css  ButtonPad.css  ButtonPad_XP.css  CameraView.css  Caregiver.css  CustomizeButton.css  DeviceVisualOverlay.css  DirectionalPad.css  DropZone.css  ExecutionMonitor.css  ExecutionMonitorLayout.css  FooterAutoNav.css  FooterControls.css  FooterGripperCam.css  FooterHeadCam.css  GripperCam.css  HeadCam.css  Map.css  (+51 more)
src/shared/: commands.tsx  commands_node.ts  remoterobot.tsx  requestresponse.tsx  svg.tsx  util.tsx  util_node.ts  webrtc.tsx  webrtcconnections.tsx  webrtcconnections_node.ts
src/shared/signaling/: FirebaseSignaling.ts  LocalSignaling.ts  NostrSignaling.ts  Signaling.ts  get_signaler.ts
src/tsx/: buttonpads.tsx  index.tsx  layoutarea.tsx  operator.tsx  overlays.tsx  predictivedisplay.tsx  robot.tsx  tabs.tsx  velocitycontrol.tsx  videostreams.tsx  videoviewer.tsx  webrtcconnections.tsx
src/util/: requestresponse.tsx  svg.tsx  util.tsx
src/utils/: commands.tsx  layouthelpers.tsx  requestresponse.tsx  util.tsx
srv/: CameraPerspective.srv  DetectObject.srv  ImageView.srv  NavigateToAruco.srv  RelativePose.srv
stretch-web-teleop-docs/: mkdocs.yml
stretch-web-teleop-docs/docs/: index.md  software.md  usage_guide.md
stretch_web_teleop_helpers/: __init__.py  constants.py  conversions.py  move_to_pregrasp_state.py  pinocchio_ik_solver.py  stretch_ik_control.py  text_to_speech_helpers.py
tests/: ros.test.tsx  signaling.spec.ts
(+299 files in other folders)
