<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stretch_web_teleop</name>
  <version>0.1.0</version>
  <description>The stretch web teleop package</description>

  <maintainer email="support@hello-robot.com">Hello Robot Inc.</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/hello-robot/stretch_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rosbridge_server</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>geometry_msgs</depend>
  <depend>usb_cam</depend>
  <!-- <build_depend>tf2_web_republisher</build_depend> -->
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>image_publisher</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
